k8s/db-deploy.yaml
# DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: docker.io/library/mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/mongo
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-pvc
---
