k8s/services.yaml
# DB
apiVersion: v1
kind: Service
metadata:
  name: db-clusterip
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
# Backend
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
spec:
  type: NodePort
  ports:
    - nodePort: 5001
      port: 5000
      targetPort: 5000
  selector:
    app: app-server
---
# Frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - nodePort: 80
      port: 3000
      targetPort: 3000
  selector:
    app: frontend
